# wheelctrl_ros

./: .gitignore  .travis.yml  README.md
general_wheelctrl/: CMakeLists.txt
general_wheelctrl/src/: general_wheelctrl.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/general_wheelctrl/lib/general_wheelctrl/: general_wheelctrl
install/general_wheelctrl/share/general_wheelctrl/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/general_wheelctrl/share/general_wheelctrl/cmake/: general_wheelctrlConfig.cmake
log/: latest_build
measure_wheel_odom_publisher/: CMakeLists.txt  README.md  package.xml
measure_wheel_odom_publisher/include/measure_wheel_odom_publisher/: measure_wheel_odom_publisher.h
measure_wheel_odom_publisher/include/omni_odom_publisher/: omni_odom_publisher.h
measure_wheel_odom_publisher/src/: measure_wheel_odom_publisher.cpp  omni_odom_publisher.cpp
mecanum_odom_publisher/: CMakeLists.txt  package.xml
mecanum_odom_publisher/src/: mecanum_odom_publisher.cpp
mecanum_wheelctrl/: CMakeLists.txt  README.md  package.xml
mecanum_wheelctrl/launch/: simulation.launch
mecanum_wheelctrl/src/: main.cpp
mecanum_wheelctrl/src/converter/: CMakeLists.txt  cmdvel2mecanum.cpp  cmdvel2mecanum.h
omni_odom_publisher/: CMakeLists.txt  README.md  package.xml
omni_odom_publisher/include/mecanum_odom_publisher/: mecanum_odom_publisher.h  omni_odom_publisher.h
omni_odom_publisher/include/omni_odom_publisher/: omni_odom_publisher.h
omni_odom_publisher/src/: omni_odom_publisher.cpp
omni_wheelctrl/: CMakeLists.txt  README.md  package.xml
omni_wheelctrl/src/: main.cpp
omni_wheelctrl/src/converter/: CMakeLists.txt  cmdvel2omni.cpp  cmdvel2omni.h
swerve_odom_publisher/: CMakeLists.txt  README.md  package.xml
swerve_odom_publisher/include/swerve_odom_publisher/: swerve_odom_publisher.h
swerve_odom_publisher/src/: swerve_odom_publisher.cpp
swerve_wheelctrl/: CMakeLists.txt  README.md  package.xml
swerve_wheelctrl/launch/: wheelctrl_4ws.launch
swerve_wheelctrl/src/: main.cpp
swerve_wheelctrl/src/converter/: CMakeLists.txt  cmdvel24ws.cpp  cmdvel24ws.h
swerve_wheelctrl/src/processings/: CMakeLists.txt  processings.cpp  processings.h
wheelctrl_ros2/: CMakeLists.txt  package.xml
wheelctrl_ros2/config/: er.yaml  rr.yaml
wheelctrl_ros2/include/wheelctrl_ros2/: general_wheelctrl.hpp  wheel.hpp
wheelctrl_ros2/include/wheelctrl_ros2/mechanam/: mechanam.cpp  mechanam.hpp
wheelctrl_ros2/include/wheelctrl_ros2/omni/: omni_2W.cpp  omni_2W.hpp  omni_3w.cpp  omni_3w.hpp  omni_4w.cpp  omni_4w.hpp
wheelctrl_ros2/include/wheelctrl_ros2/steering/: steering.cpp  steering.hpp
wheelctrl_ros2/launch/: er_wheelctrl_ros2_launch.py  rr_wheelctrl_ros2_launch.py  wheelctrl_ros2_launch.py
wheelctrl_ros2/src/: general_wheelctrl.hpp  mechanam.cpp  mechanam.hpp  moving_wheel.cpp  moving_wheel.hpp  omni_2w.cpp  omni_2w.hpp  omni_3w.cpp  omni_3w.hpp  omni_4w.cpp  omni_4w.hpp  steering.cpp  steering.hpp  testing_wheel.cpp  wheel.hpp  wheelctrl_ros2.cpp  wheelctrl_ros2.hpp
